--- a/mybatis-02-configuration/src/main/resources/jdbc.properties
+++ b/mybatis-02-configuration/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/mybatis?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://175.178.221.144:3307/mybatis?characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=123456
 #jdbc.driverClassName=org.postgresql.Driver
